Update SQL Chicago Project.ipynb

--- a/SQL Chicago/SQL Chicago Project.ipynb
+++ b/SQL Chicago/SQL Chicago Project.ipynb
@@ -802,7 +802,39 @@
     "Query for the 'community area number' that has most number of incidents\n",
     "-->\n"
    ]
-
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 9\n",
+    "\n",
+    "##### Use a sub-query to find the name of the community area with highest hardship index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 10\n",
+    "\n",
+    "##### Use a sub-query to determine the Community Area Name with most number of crimes?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
